WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59769
[chromium] Fix silly bug with WebPermissionClient
https://bugs.webkit.org/show_bug.cgi?id=59769
Summary
[chromium] Fix silly bug with WebPermissionClient
John Abd-El-Malek
Reported
2011-04-28 18:57:24 PDT
[chromium] Fix silly bug with WebPermissionClient
Attachments
Patch
(2.17 KB, patch)
2011-04-28 18:58 PDT
,
John Abd-El-Malek
tony
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Abd-El-Malek
Comment 1
2011-04-28 18:58:01 PDT
Created
attachment 91618
[details]
Patch
John Abd-El-Malek
Comment 2
2011-04-28 19:21:02 PDT
Committed
r85287
: <
http://trac.webkit.org/changeset/85287
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug