2011-04-28  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Tony Chang.

        [chromium] Fix silly bug with WebPermissionClient
        https://bugs.webkit.org/show_bug.cgi?id=59769

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::allowJavaScript):
        (WebKit::FrameLoaderClientImpl::allowPlugins):
        (WebKit::FrameLoaderClientImpl::allowImages):


Canonical link: https://commits.webkit.org/74994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85287 268f45cc-cd09-0410-ab3c-d52691b4dbfc